--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "mongodb": "^5.4.0",
+    "mongoose": "^7.1.0",
     "next": "13.4.1",
+    "next-auth": "^4.22.1",
+    "next-connect": "^1.0.0",
+    "node-fetch": "^3.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
